--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   <div class="home-image">
-  	<img src="/assets/archive.png">
+  	<img src="/assets/antwerp.png">
   	<p class="caption">Interactive archive at MoMu by Lab101, Antwerp, Belgium</p>
   </div>
 
